<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivBackground"
        style="@style/CoverImage"
        android:layout_width="0dp"
        android:layout_height="@dimen/cover_height"
        android:contentDescription="@string/background_cover"
        android:src="@drawable/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivSpiderman"
        style="@style/MainImage"
        android:layout_width="@dimen/main_image_size"
        android:layout_height="@dimen/main_image_size"
        android:layout_marginTop="@dimen/layout_margin_main_image"
        android:contentDescription="@string/spiderman_image"
        android:src="@drawable/spiderman"
        app:layout_constraintEnd_toEndOf="@id/ivBackground"
        app:layout_constraintStart_toStartOf="@id/ivBackground"
        app:layout_constraintTop_toTopOf="@id/ivBackground" />

    <TextView
        android:id="@+id/tvTitle"
        style="@style/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_margin_default"
        android:text="@string/spiderman"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivSpiderman" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/layout_margin_default"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/tvDetail"
            style="@style/Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin_default"
            android:layout_marginEnd="@dimen/layout_margin_default"
            android:text="@string/about_spiderman" />

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabFav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/layout_margin_default"
        android:layout_marginBottom="@dimen/layout_margin_default"
        android:contentDescription="@string/favorite_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_fav_border" />

</androidx.constraintlayout.widget.ConstraintLayout>